CI runs bazelisk test --config=ci on both OSes, and every current-state document speaks Bazel while measurement records stay as measured
The workflow drops setup-java and setup-gradle entirely (rules_java fetches the remote JDK; the runners' preinstalled bazelisk reads .bazelversion), caches the repository cache keyed on the three lockfiles, and uploads bazel-testlogs on failure; the real-bazel and bazel-sweep exclusions live visibly in the ci config rather than in an environment-shaped silence. README, packaging, troubleshooting, performance, bazel-compatibility and architecture docs now give the bazel commands — including the deliberately awkward two-fence invocation for the version sweep — while performance.md states plainly that its figures predate the migration and were measured under Gradle-forked JVMs with identical flags, preserving the recorded Gradle-era command lines as records instead of falsifying them. jpackage docs follow the deploy-jar port, notarize's no-rebuild difference stated. implementation-status.md gains the migration changelog entry.

PM-Task: 20260824-2153/t2